Added home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Mr. Dimmick's Social Jumper!</title>
 </head>
 <body>
-$END$
+    <h1>Welcome to my jumper's control page!</h1>
+    <p>Pick an option:</p>
+    <ul>
+        <li><a href="/on/">Swith the tree on!</a></li>
+        <li><a href="/off/">Swith the tree off!</a></li>
+        <li><a href="/flash/">Make the tree flash!</a></li>
+        <li><a href="/chase/">Make the tree do a fancy flash!</a></li>
+    </ul>
 </body>
 </html>
